Final styling to prevent too much collapse at narrower resolutions

--- a/style.css
+++ b/style.css
@@ -15,14 +15,15 @@ p,
 }
 
 .dashboard {
-    font-size: 2.2rem;
+   
     font-weight: 600;
     color: white;
+    max-width: 75%;
 }
 
 .nav,
 h1 {
-    font-size: 2rem;
+    max-width: 75%;
 }
 
 .nav {
@@ -69,10 +70,7 @@ p.tag-text {
 
 .container {
     display: grid;
-    grid-template: 1fr 5fr / 1.5fr 5fr;
-    
-    height: 100vh;
-    gap: 10px;
+    grid-template: 1fr 9fr / .75fr 5fr;
     background-color: #e2e8f0;
 }   
 
@@ -121,12 +119,15 @@ p.tag-text {
 }
 .bottom-header > .user-icon {
     justify-self: center;
-    transform: scale(150%);
+    transform: scale(130%);
+    width: 121px;
+
 }
 .greet-cont {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 2fr;
+    width: 300px;
 }
 .greeting {
     font-size: small;
@@ -140,6 +141,8 @@ p.tag-text {
 .greet-cont > .user-fullname {
     grid-row: 2;
     grid-column: 1;
+    width: 100px;
+   
 }
 .greet-cont > .user-handle {
     grid-row: 2;
@@ -152,6 +155,7 @@ p.tag-text {
     display: grid;
     grid-template-columns: min-content 1fr;
     grid-template-rows: min-content 1fr 1fr;
+    width: 160px;
    
 }
 
@@ -230,13 +234,13 @@ p.tag-text {
     display: grid;
     grid-template: 1fr / 2fr 1fr;
     gap: 10px; 
+    align-items: start;
     
 
 }
 
 .projects {
-    grid-area: 1 / 1 ;
-    
+    grid-area: 1 / 1;
 }
 
 .proj-cont {
@@ -266,8 +270,8 @@ p.tag-text {
 .ann-trend{
     grid-area: 1 / 2;
     display: grid;
-    grid-template: auto auto / 1fr;
-    gap: 10px;
+    grid-template: 1fr 1fr / 1fr;
+    align-items: start;
 }
 
 .ann {
@@ -290,8 +294,6 @@ h1 {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: min-content auto;
-    border-radius: 10px;
-    box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.2);
 }
 .trend {
     display: grid;
@@ -301,6 +303,8 @@ h1 {
     background-color: #fff;
     margin: 1em;
     padding: 2em;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.2);
 }
 .trend-items {
     display: grid;
@@ -336,6 +340,7 @@ input.search[type=text] {
 .button {
     display: inline-block;
     padding: 8px 30px;
+    margin: 0 1em 0 1em;
     font-size: 16px;
     cursor: pointer;
     text-align: center;
